--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -96,6 +96,8 @@ body
 					height: 45px
 					margin-left: -53px
 					margin-top: 0px
+.zag
+	display: inline
 .nav
 	padding-left: 0
 	margin: 0
@@ -142,6 +144,69 @@ body
 				border: none
 				a
 					text-decoration: underline
+.slideforma
+	background: url(../img/ic-ph/slidecar.jpeg) 0 0 no-repeat
+	width: 100%
+	height: 500px
+.formaout
+	background-color: rgb(131, 146, 165)
+	opacity: 0.929
+	margin-top: 35px
+	padding: 12px
+	display: block
+	float: right
+	color: #fff
+	h2
+		font-size: 18px
+		color: #fff
+		font-weight: 200
+		text-align: center
+		margin-top: 0
+	p
+		text-align: center
+		margin-top: 8px
+		margin-bottom: 5px
+.formin
+	background-color: rgb(24, 64, 109)
+	// opacity: 0.78
+	padding-top: 15px
+	display: inline-block
+	form
+		margin: 0 35px
+		input
+			color: #000
+			display: inline-block
+			border: none
+			padding-left: 5px
+.lab
+	display: inline-block
+	background: #818fa1
+	height: 28px
+	width: 67px
+	text-align: center
+	position: relative
+	top: -1px
+.free
+	height: 10px
+.phonein
+	text-align: center
+	width: 100%
+	margin-top: 15px
+.but
+	display: block
+	color: #fff
+	background: none
+	border: 2px #fff solid
+	margin: 0 auto
+	margin-top: 15px
+	text-align: center
+	width: 115px
+	margin-bottom: 20px
+	&:hover
+		background: #fff
+		color: $main-color
+
+
 
 
 
