--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -44,6 +44,11 @@ body
 	line-height: 1.65
 	font-family: $default-font
 	overflow-x: hidden
+h2
+	text-align: center
+	font-size: 30px
+	font-weight: 300
+	margin: 10px 0
 
 .img-responsive
 	display: block
@@ -205,6 +210,16 @@ body
 	&:hover
 		background: #fff
 		color: $main-color
+.about
+	p
+		text-align: center
+		margin-top: 10px	
+		margin-bottom: 20px
+.gruz
+	h2
+		color: #fff
+		margin-top: 60px
+	background: url(../img/ic-ph/skos1.jpg) 0 0 no-repeat
 
 
 
