--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -253,9 +253,14 @@ h2
 		font-size: 24px
 		font-weight: 300
 	img
-		height: 120px
+		height: 100px
 		width: auto
 	margin-top: 10px
+.partners
+	h2
+		color: #3e5f85
+		margin-bottom: 50px
+		font-weight: 500
 .car2 
 	.owl-item 
 		img
@@ -278,6 +283,170 @@ h2
 	.owl-next
 		position: absolute
 		right: -35px
+.news
+	margin-top: 40px
+	h2
+		margin-bottom: 50px
+		font-weight: 500
+		margin-top: 40px
+	h4
+		font-size: 18px
+		text-align: center
+		color: #4f3c3c
+		margin-top: 5px
+		margin-bottom: 0
+	p
+		text-align: justify
+		font-size: 16px
+		margin-top: 5px
+		margin-bottom: 5px
+		line-height: 1.3
+	img
+		display: block
+		margin: 0 auto
+	.row
+		a
+			text-align: right
+			float: right
+	.lnk
+		text-align: center
+		margin-top: 20px
+		margin-bottom: 40px
+	background-color: #fafafa
+	
 
-
+.contfon
+	background: url(../img/ic-ph/slide2.jpeg) 0 0 no-repeat
+	position: relative
+	background-size: cover
+	height: 380px
+.contover
+	position: absolute
+	top: 0
+	left: 0
+	width: 100%
+	height: 100%
+	z-index: 2
+	background-color: rgba(131, 146, 165, 0.8)
+.it
+	z-index: 3
+	background-color: rgba(24, 64, 109, 0.8)
+	height: 350px
+	margin-top: 13px
+.item1
+	h2
+		color: #fff
+		text-align: center
+		font-weight: 300
+		margin-bottom: 20px
+	color: #fff
+	font-size: 18px
+	padding-bottom: 40px
+	padding-top: 20px
+.phonef
+	font-weight: 300
+	margin-left: 80px
+	&:before
+		content: ' '
+		position: absolute
+		background: url(../img/ic-ph/phonef.png) 0 0 no-repeat
+		background-size: contain
+		width: 45px
+		height: 45px
+		margin-left: -53px
+		margin-top: 0px
+	font-size: 30px
+.mailf
+	font-weight: 300
+	margin-left: 80px
+	&:before
+		content: ' '
+		position: absolute
+		background: url(../img/ic-ph/mailf.png) 0 0 no-repeat
+		background-size: contain
+		width: 45px
+		height: 45px
+		margin-left: -53px
+		margin-top: -7px
+	margin-top: 25px
+.addressf
+	margin-left: 80px
+	@extend .mailf
+	&:before
+		content: ' '
+		position: absolute
+		background: url(../img/ic-ph/locf.png) 0 0 no-repeat
+		background-size: contain
+		width: 45px
+		height: 45px
+		margin-left: -53px
+		margin-top: 5px
+.item2
+	font-weight: 300
+	padding-top: 15px
+	h2
+		color: #fff
+		text-align: center
+		font-weight: 300
+		margin-bottom: 15px
+		font-size: 18px
+	form
+		margin: 0 35px
+		color: #fff
+		input
+			color: #000
+			display: inline-block
+			border: none
+			padding-left: 5px
+	p
+		margin-top: 5px
+		margin-bottom: 3px
+		text-align: center
+	.phonein
+		width: 250px
+		display: block
+		margin: 10px auto
+		margin-top: 20px
+	.but
+		margin: 5px auto
+.lft
+	display: block
+	width: 270px
+	margin: 0 auto
+	margin-bottom: 10px
+.rgt
+	display: inline-block
+	float: right
+	margin-bottom: 15px
+	a
+		color: #fff
+.footer
+	background-color: $main-color
+	color: #fff
+	padding-top: 30px
+	a
+		color: #fff
+		font-size: 14px
+	img
+			float: left
+			margin-top: 10px
+			margin-right: 22px
+			width: 60px
+	h1
+		font-size: 25px
+		font-family: $default-font
+		margin-top: 8px
+		float: left
+		color: #fff
+		margin-bottom: 0
+	h4
+		font-family: $default-font
+		float: left
+		color: #fff
+		margin-top: -8px
+		font-size: 18px
+		font-weight: 300
+	p
+		text-align: center
+		text-decoration: underline
 @import "media" // Всегда в конце
